css for div fixed wrap

--- a/style.css
+++ b/style.css
@@ -77,9 +77,10 @@
     bottom: 0%;
 }
 .mainBox{
+    background: rgb(255, 255, 255);
     width: 400px;
     height: 450px;
-    border: 10px solid hsl(0, 2%, 34%);
+    border: 10px solid hsl(120, 94%, 31%);
     position: absolute;
     z-index: 1;
 }
@@ -87,9 +88,34 @@
     width: 100%;
     height: 30px;
     position: absolute;
-    background: hsl(0, 2%, 34%);
+    background: hsl(120, 94%, 31%);
     top:0%;
 }
 .top{
     z-index: 1;
+}
+h4{
+    position: absolute;
+    top:-36%;
+}
+.wallpaper{
+        width: 200px;
+        box-shadow: 3px 3px 5px #888888;
+        border-style: solid;
+        border-width: 1px;
+        border-color: grey;
+        border-radius: 2px;
+        padding-left: 5px;
+        padding-right: 5px;
+        padding-top: 3px;
+        padding-bottom: 3px;
+        position: fixed;
+        display: none;
+}
+input[type=file]{
+    display:none;
+}
+.wrapp{
+    width: 100%;
+    height: 100%;
 }
